# mt-mach-reverse-engineering

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
data/: contour_milling.csv  face_milling.csv
notebooks/: single_use_case.ipynb
scripts/: 1_protection_of_data.py  2_remaining_data_utility.py  3_reversal_of_protection.py  4_velocity_segmentation.py  5_operating_states.py  6_feed.py  6_radial_engagement.py  6_workpiece_geometry.py
scripts/results/: .gitkeep
scripts/visualize_results/: figure_config.py  plotting_helpers.py  visualize_results_contour_milling.ipynb  visualize_results_face_milling.py
src/reverse_engineering/: classes.py  data_loading.py  helpers.py  plotting.py  protection.py  reconstruction.py  reversal.py  velocity_segmentation.py
