[project]
name = "reverse-engineering"
version = "0.1.0"
description = "Privacy-utility analysis of protected CNC machine-tool measurement data: protect (downsample, add noise, suppress signals), reverse the protection, and quantify how much process information can still be reconstructed."
authors = [
    {name = "Daniel Piendl"},
]

requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "cnc",
    "machine-tool",
    "manufacturing",
    "data-protection",
    "privacy",
    "reverse-engineering",
    "kalman-filter",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "notebook>=7.6.0",
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "psycopg[binary]>=3.2.6",
    "shapely>=2.1.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "numba>=0.62.0",
    "ruptures>=1.1.9",
    "filterpy>=1.4.5",
]

[tool.pdm.dev-dependencies]
dev = [
    "black<24.0.0,>=23.11.0",
    "isort<6.0.0,>=5.13.0",
    "flake8<7.0.0,>=6.1.0",
    "nb-clean<4.0.0,>=3.1.0",
    "pre-commit<4.0.0,>=3.6.0",
]

[tool.pdm]
distribution = true

#[[tool.pdm.source]]
#name = "PyTorch"
#url = "https://download.pytorch.org/whl/cu126"
#include_packages = ["torch", "torchvision", "torchaudio"]

[tool.pdm.build]
includes = ["src"]

[tool.black]
line-length = 119
target_version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "tests",
]
forced_separate = [
    "tests",
]
line_length = 119

[tool.flake8]
max-line-length = 119
exclude = ".git, __pycache__, docs/source/conf.py, old, build, dist"
ignore = "E203, E266, E501, W503, W605"
select = "B, C, E, F, W, T4"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests",
]
markers = ["slow: mark a test as slow"]
